Revision history for Perl extension MooseX::SingleArg.

{{$NEXT}}

0.06 2018-04-17

 - Add a cpanfile, doh!

0.05 2018-04-09

 - Minor doc updates.
 - As of 0.04 we are no longer using MooseX::ClassAttribute, so removing
   it from the prereqs.

0.04 2012-04-16

 - Use Moose's meta traits more effectively so that single args may be
   declared in roles.

0.03 2012-03-20

 - Comment on MooseX::OneArgNew.
 - Add force option.

0.02 2012-03-19

 - Fix prereqs.

0.01 2012-03-19

 - First release.
